peac_dev/force-app/main/default/objects/SF2SLLog__c/SF2SLLog__c.object-meta.xml
<CustomObject>
    <label>SF2SLLog</label>
    <nameField>
        <displayFormat>SF2SL{0000000}</displayFormat>
        <label>SF2SLLog Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SF2SLLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>