peac_dev/force-app/main/default/objects/SF2SLLog__c/fields/CreateDate__c.field-meta.xml
<CustomField>
    <fullName>CreateDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CreateDate</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>