peac_dev/force-app/main/default/objects/SF2SLLog__c/fields/IDField__c.field-meta.xml
<CustomField>
    <fullName>IDField__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IDField</label>
    <length>100</length>
    <type>Text</type>
</CustomField>