peac_dev/force-app/main/default/objects/SF2SLLog__c/fields/LogType__c.field-meta.xml
<CustomField>
    <fullName>LogType__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LogType</label>
    <length>128</length>
    <required>true</required>
    <type>Text</type>
</CustomField>