peac_dev/force-app/main/default/objects/SF2SLLog__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>