peac_dev/force-app/main/default/objects/SF2SLLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Request__c</columns>
    <columns>Response__c</columns>
    <columns>IDField__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CreateDate__c</field>
        <operation>greaterThan</operation>
        <value>6/1/2025 12:00 AM</value>
    </filters>
    <filters>
        <field>IDField__c</field>
        <operation>equals</operation>
        <value>a3RPP000000fhdh2AA</value>
    </filters>
    <label>All</label>
</ListView>