peac_dev/force-app/main/default/objects/SF2SLLog__c/listViews/test.listView-meta.xml
<ListView>
    <fullName>test</fullName>
    <columns>NAME</columns>
    <columns>Object__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>CreateDate__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>3/27/2019 12:00 AM</value>
    </filters>
    <label>test</label>
</ListView>