peac_dev/force-app/main/default/objects/SF2SLLog__c/listViews/Today.listView-meta.xml
<ListView>
    <fullName>Today</fullName>
    <columns>CreateDate__c</columns>
    <columns>NAME</columns>
    <columns>Request__c</columns>
    <columns>Response__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Object__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today</label>
    <sharedTo>
        <roleAndSubordinatesInternal>System_Admin</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>